# AndroidintheMiddle

./: LICENSE  README.md
app/: Android.mk  CMakeLists.txt  build.gradle
app/src/androidTest/java/it/uniroma2/giadd/aitm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: iptables
app/src/main/assets/armeabi/: arpspoof  mykill  native-binary  tcpick
app/src/main/assets/armeabi-v7a/: arpspoof  mykill  native-binary  tcpick
app/src/main/assets/x86/: arpspoof  mykill  native-binary  tcpick
app/src/main/assets/x86_64/: arpspoof  mykill  tcpick
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/arpspoof/: CMakeLists.txt  arp.c  arp.h  arpspoof.c  ensure_death.c  hashmap.c  net.c  net.h
app/src/main/cpp/include/: droid.h
app/src/main/cpp/include/linux/: types.h
app/src/main/cpp/libnet/: CMakeLists.txt
app/src/main/cpp/libpcap/: CMakeLists.txt  bpf_dump.c  bpf_image.c  dlpisubs.c  etherent.c  fad-getad.c  fad-gifc.c  fad-glifc.c  fad-null.c  fad-win32.c  gencode.c  grammar.c  grammar.y  inet.c  nametoaddr.c  optimize.c  pcap-bpf.c  pcap-bt-linux.c  pcap-dag.c  pcap-dlpi.c  pcap-dos.h  pcap-enet.c  pcap-libdlpi.c  pcap-linux.c  pcap-nit.c  pcap-null.c  pcap-pf.c  pcap-septel.c  pcap-snit.c  pcap-snoop.c  pcap-usb-linux.c  pcap-win32.c  pcap.c  savefile.c  scanner.c  scanner.l  sf-pcap-ng.c  sf-pcap.c
app/src/main/cpp/libpcap/Win32/Src/: getaddrinfo.c  inet_aton.c  inet_pton.c
app/src/main/cpp/libpcap/bpf/net/: bpf_filter.c
app/src/main/cpp/libpcap/missing/: snprintf.c
app/src/main/cpp/libpcap/tests/: filtertest.c  valgrindtest.c
app/src/main/cpp/mykill/: CMakeLists.txt  mykill.c
app/src/main/cpp/native-binary/: CMakeLists.txt  native-binary.cpp
app/src/main/cpp/native-lib/: CMakeLists.txt
app/src/main/cpp/pcap-parser/: Android.mk  CMakeLists.txt  native-lib.cpp  pcap-parser.cpp
app/src/main/cpp/tcpick/: CMakeLists.txt  args.c  args.h  colors.h  config.h  conn.h  datalink.c  datalink.h  def.h  display.c  display.h  extern.h  flags.h  fragments.c  fragments.h  globals.h  ip.h  lookup.h  lookup_query.c  lookup_query.h  lookup_tree.h  loop.c  msg.h  quit.c  quit.h  tcp.h  tcpick.c  tcpick.h  text.h  time.c  time.h  timer.c  timer.h  tracker.c  tracker.h  udp.h  verify.c  verify.h  write.c  write.h
app/src/main/cpp/tcpick/src/: lookup.h
app/src/main/java/it/uniroma2/giadd/aitm/: CaptureActivity.java  MainActivity.java  OptionsActivity.java  PacketDetailActivity.java
app/src/main/java/it/uniroma2/giadd/aitm/adapters/: CursorFragmentStatePagerAdapter.java  CursorRecyclerAdapter.java  IpPacketAdapter.java  NetworkHostsAdapter.java  PacketDetailPagerAdapter.java  TcpFlowAdapter.java
app/src/main/java/it/uniroma2/giadd/aitm/fragments/: CaptureFragment.java  MessagingAppsFragment.java  OpenPcapFragment.java  PacketDetailFragment.java  PacketSelectedDialogFragment.java  ScannerFragment.java  TargetFragment.java  TcpFlowInspectionFragment.java
app/src/main/java/it/uniroma2/giadd/aitm/interfaces/: AutonomousSystemGrabber.java  OnAutonomousSystemGrabbedListener.java  OnCommandListener.java  OnSuCommandExecuted.java  SimpleClickListener.java
app/src/main/java/it/uniroma2/giadd/aitm/managers/: ArpTableReader.java  BinaryManager.java  PacketSender.java  RootManager.java
app/src/main/java/it/uniroma2/giadd/aitm/managers/interfaces/: OnCommandListener.java  OnSuCommandExecuted.java
app/src/main/java/it/uniroma2/giadd/aitm/models/: KillConnectionModule.java  MACAddress.java  MitmModule.java  MyIpPacket.java  MyTcpPacket.java  MyTransportLayerPacket.java  MyUdpPacket.java  NetworkHost.java  PcapParser.java  SniffAllModule.java  TcpFlow.java  TcpickBanner2.java  TcpickHeader.java
app/src/main/java/it/uniroma2/giadd/aitm/models/dto/: Prefix.java  RipeAnnouncedPrefix.java  RipeAnnouncedPrefixData.java  Timeline.java
app/src/main/java/it/uniroma2/giadd/aitm/models/exceptions/: ParsingWhatsappCidrException.java
app/src/main/java/it/uniroma2/giadd/aitm/models/modules/: ASGrabberImo.java  ASGrabberKakaoTalk.java  ASGrabberNimbuzz.java  ASGrabberTelegram.java  ASGrabberTextPlus.java  ASGrabberVk.java  ASGrabberWhatsapp.java  ASGrabberYahoo.java  ASGrabberZalo.java  ImoASGrabber.java  KakaoTalkASGrabber.java  KillConnectionModule.java  MitmModule.java  ModuleKillConnection.java  ModuleMitm.java  ModuleSniffAll.java  ModuleSniffBbm.java  ModuleSniffGroupMe.java  ModuleSniffHike.java  ModuleSniffImo.java  ModuleSniffInstagram.java  ModuleSniffKakaoTalk.java  ModuleSniffMaai.java  ModuleSniffMxit.java  ModuleSniffNimbuzz.java  ModuleSniffQq.java  ModuleSniffTalkray.java  ModuleSniffTelegram.java  ModuleSniffTextPlus.java  ModuleSniffVk.java  ModuleSniffWhatsApp.java  ModuleSniffYahoo.java  ModuleSniffZalo.java  NimbuzzASGrabber.java  SniffAllModule.java  SniffBbmModule.java  SniffGroupMeModule.java  SniffHikeModule.java  SniffImoModule.java  (+19 more)
app/src/main/java/it/uniroma2/giadd/aitm/services/: ParsePcapService.java  SniffService.java
app/src/main/java/it/uniroma2/giadd/aitm/tasks/: CheckHostTask.java  InitializeBinariesTask.java  NetworkHostScannerTask.java  ParsePcapTask.java
app/src/main/java/it/uniroma2/giadd/aitm/utils/: DividerItemDecoration.java  FileUtilities.java  IPUtils.java  IpPacketDBHandler.java  ListIPs.java  MACAddressVendorLookup.java  NetworkUtils.java  PermissionUtils.java  PortUtils.java  PreferencesUtils.java  RecyclerTouchListener.java  SubnetUtils.java  TcpickParseUtils.java
app/src/main/res/layout/: activity_capture.xml  activity_main.xml  activity_options.xml  activity_packet_detail.xml  dialog_packet_selected.xml  fragment_capture.xml  fragment_messaging_app.xml  fragment_openpcap.xml  fragment_packet_detail.xml  fragment_scanner.xml  fragment_target.xml  fragment_tcpflowinspection.xml  nav_header.xml  row_ip_packet.xml  row_network_host.xml  row_tcp_flow.xml  toolbar.xml
app/src/main/res/menu/: drawer_menu.xml  scanner_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/it/uniroma2/giadd/aitm/: ExampleUnitTest.java
